# Teleeeee

./: .gitignore  .gitignore.txt  README.md  hobby - Shortcut.lnk
OpenCVPractice/BackGroundFromVideo/: CMakeLists.txt
OpenCVPractice/BackGroundFromVideo/BackGroundFromVideo/: BackGroundFromVideo.cpp  BackGroundFromVideo.h  CMakeLists.txt
OpenCVPractice/Demosaicing/: CMakeLists.txt
OpenCVPractice/Demosaicing/Demosaicing/: CMakeLists.txt  Demosaicing.cpp  Demosaicing.h
OpenCVPractice/DetecShapes/: CMakeLists.txt  line_detect.cpp  line_detect.h
OpenCVPractice/DetecShapes/DetecShapes/: CMakeLists.txt  DetecShapes.cpp  DetecShapes.h
OpenCVPractice/DetectCorners/: CMakeLists.txt
OpenCVPractice/DetectCorners/DetectCorners/: CMakeLists.txt  DetectCorners.cpp  DetectCorners.h
OpenCVPractice/DownSizeUpSize/: CMakeLists.txt
OpenCVPractice/DownSizeUpSize/DownSizeUpSize/: CMakeLists.txt  DownSizeUpSize.cpp  DownSizeUpSize.h
OpenCVPractice/Drawing/: CMakeLists.txt
OpenCVPractice/Drawing/Drawing/: CMakeLists.txt  Drawing.cpp  Drawing.h
OpenCVPractice/ImageManipulation/: CMakeLists.txt
OpenCVPractice/ImageManipulation/ImageManipulation/: CMakeLists.txt  ImageManipulation.cpp  ImageManipulation.h
OpenCVPractice/MeasureAngle/: CMakeLists.txt
OpenCVPractice/MeasureAngle/MeasureAngle/: CMakeLists.txt  MeasureAngle.cpp  MeasureAngle.h
OpenCVPractice/Remapping/: CMakeLists.txt
OpenCVPractice/Remapping/Remapping/: CMakeLists.txt  Remapping.cpp  Remapping.h
OpenCVPractice/demosaicing_google_test/: CMakeLists.txt
OpenCVPractice/demosaicing_google_test/demosaicing_google_test/: CMakeLists.txt  demosaicing_google_test.cpp  demosaicing_google_test.h
OpenCVPractice/find_contours/: CMakeLists.txt
OpenCVPractice/find_contours/find_contours/: CMakeLists.txt  find_contours.cpp  find_contours.h
OpenCVPractice/funWithOpenCv/: CMakeLists.txt
OpenCVPractice/funWithOpenCv/funWithOpenCv/: CMakeLists.txt  UART.cpp  UART.h  filters.cpp  filters.h  funWithOpenCv.cpp  funWithOpenCv.h
OpenCVPractice/qtpractice/: qtpractice.sln
OpenCVPractice/qtpractice/qtpractice/: qtpractice.cpp  qtpractice.vcxproj  qtpractice.vcxproj.filters
OpenCVPractice/smoothing_filter/: CMakeLists.txt
OpenCVPractice/smoothing_filter/smoothing_filter/: CMakeLists.txt  smoothing_filter.cpp  smoothing_filter.h
OpenCVPractice/test/: CMakeLists.txt
OpenCVPractice/test/test/: CMakeLists.txt  test.cpp
OpenCVPractice/test/test/MyApp_lib/: CMakeLists.txt  myClass.cpp  myClass.h
OpenCVPractice/test/test/MyApp_tests/: CmakeLists.txt  myAppTest.cpp
OpenCVPractice/video_input/: CMakeLists.txt
OpenCVPractice/video_input/video_input/: CMakeLists.txt  video_input.cpp  video_input.h
hobby/: .gitignore
hobby/SPI_setup/: SPI_setup.atsln
hobby/SPI_setup/SPI_setup/: SPI_setup.c  SPI_setup.componentinfo.xml  SPI_setup.cproj  SPI_setup.h  main.c
hobby/USART_distance/atmel-template-project/: atmel-template-project.cproj  main.c
hobby/distance/: distance.atsln
hobby/distance/distance/: distance.componentinfo.xml  distance.cproj  main.c
hobby/driver_for_servo/: driver_for_servo.atsln
hobby/driver_for_servo/driver_for_servo/: driver_for_servo.componentinfo.xml  driver_for_servo.cproj  main.c
hobby/led/: led.cbp  led.depend
hobby/midle_offensive_led/: kill_me.ino
hobby/other_distance/atmel-template-project/: atmel-template-project.cproj  main.c  stepper.c  stepper.h
hobby/remoteOverUarty/: CMakeLists.txt
hobby/remoteOverUarty/remoteOverUarty/: CMakeLists.txt  remoteOverUarty.cpp  remoteOverUarty.h
hobby/stepper/stepper/: main.c  stepper.componentinfo.xml  stepper.cproj
hobby/test_code_blocks/: main.c  test_code_blocks.cbp  test_code_blocks.depend
hobby/utility/: utility.atsln
hobby/utility/utility/: main.c  utility.c  utility.componentinfo.xml  utility.cproj  utility.h
hobby/vizsgaBeugroGyakorlas/: CMakeLists.txt
hobby/vizsgaBeugroGyakorlas/vizsgaBeugroGyakorlas/: CMakeLists.txt  vizsgaBeugroGyakorlas.cpp  vizsgaBeugroGyakorlas.h
myFirstWebsite/: index.html  style.css
week--01/day-02/: test21  test41
week--01/day-03/AnimalsAndLegs/: CMakeLists.txt  main.cpp
week--01/day-03/BMI/: main.cpp
week--01/day-03/ConditionalVariableMutation/: main.cpp
week--01/day-03/CountFromTwo/: CMakeLists.txt
week--01/day-03/DefineBasicInfo/: main.cpp
week--01/day-03/DrawDimond/: CMakeLists.txt  main.cpp
week--01/day-03/DrawPiramid/: main.cpp
week--01/day-03/DrawSquare/: CMakeLists.txt  main.cpp
week--01/day-03/FavouriteNumber/: CMakeLists.txt  main.cpp
week--01/day-03/GuessTheNumber/: main.cpp
week--01/day-03/HelloOthers/: main.cpp
week--02/day--03/drawAll/: CMakeLists.txt  centerBoxFunction.cpp  checkerboard.cpp  coloredBox.cpp  connectTheDots.cpp  diagonals.cpp  draw.cpp  drawing.cpp  fillWithRectangels.cpp  functionToCenter.cpp  goToCenter.cpp  horizontal.cpp  horizontalline.cpp  main.cpp  purpleSteps.cpp  purpleSteps3D.cpp  rainbowSquares.cpp  square.cpp  squarepositioning.cpp  starynight.cpp  tocenter.cpp
week--02/day--03/drawAll/cmake/: purpleSteps£D.cpp  starryNight.cpp
week--02/day--04/envelopeStar/: CMakeLists.txt  draw.cpp  envelopeStar.cpp  hexagonOther.cpp  hexagonalPlay.cpp  hexagons.cpp  lineplay.cpp  lineplays.cpp  test.cpp  triangles.cpp
week--03/day--03/oopTest/: CMakeLists.txt  main.cpp
week-01/Hellome/: hellome.cpp  hellome.h
week-01/day-02/: test11  test31  test41  test51
week-01/day-03/: .gitignore.txt  test.txt
week-02/day-02/: CMakeLists.txt
week-06/append_a/: main.c
week-06/count_between_chars/: main.c
week-06/guess_game/: CMakeLists.txt
week-06/helloWorld/: CMakeLists.txt
week-06/index_of_word/: main.cpp
week-06/is_in_sentence/: main.c
week-06/length/: main.c
week-06/odd_or_even/: CMakeLists.txt  main.c
week-06/pi/: CMakeLists.txt
week-06/prime/: main.c
week-06/two_numbers/: main.c
week-06/where_is_it/: main.c
week-09/test_exam_first/: CMakeLists.txt  main.c
week-09/trial_exam_second/: CMakeLists.txt  doggo_register.c  doggo_register.h  main.c
week-09/trial_exam_third/: trial_exam_third.atsln
(+629 files in other folders)
