# CMakeList.txt : CMake project for demosaicing_google_test, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (demosaicing_google_test "demosaicing_google_test.cpp" "demosaicing_google_test.h")

# TODO: Add tests and install targets if needed.
